[package]
edition = "2021"
name = "moonblokz-radio-embedded-test"
version = "0.1.0"
authors = ["Peter Sallai <peter.sallai@badaccess.eu>"]
description = "Embedded test for moonblokz radio library - rp2040 Lora"
homepage="https://www.moonblokz.com"
autotests = false
autobenches = false

[[bin]]
name = "moonblokz-radio-embedded-test"
path = "src/main.rs"
test = false
bench = false
doc = false
[dependencies]
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb-logger = { version = "0.4.0" }
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
log = "0.4"
moonblokz-radio-lib = { path = "../../", default-features = false, features = ["radio-device-lora-sx1262"] }
portable-atomic = { version = "1", features = ["critical-section"] }

[profile.release]
lto = true
opt-level = "z"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
panic = "abort"

[profile.dev]
lto = true
opt-level = "z"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
panic = "abort"