[package]
edition = "2021"
name = "moonblokz-radio-embedded-test"
version = "0.1.0"
authors = ["Peter Sallai <peter.sallai@badaccess.eu>"]
description = "Embedded test for moonblokz radio library - rp2040 Lora"
homepage="https://www.moonblokz.com"
autotests = false
autobenches = false

[[bin]]
name = "moonblokz-radio-embedded-test"
path = "src/main.rs"
test = false
bench = false
doc = false

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

embassy-sync = { version = "0.7"}
embassy-executor = { version = "0.9", features = []}
embassy-time = { version = "0.5", features = []}
embassy-futures = { version = "0.1"}
embassy-rp = { version = "0.8",features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040"]}
embassy-usb = { version = "0.5.0" }

lora-phy = { git = "https://github.com/lora-rs/lora-rs.git", default-features = false }

log = "0.4"

rp-usb-console = { version = "0.2"}
moonblokz-radio-lib = { path = "../../", default-features = false, features = ["radio-device-lora-sx1262","memory-config-large"] }

heapless = "0.9"

[profile.release]
lto = true
opt-level = "z"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
panic = "abort"

[profile.dev]
lto = true
opt-level = "z"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
panic = "abort"